# rs-rayon-executor

./: Cargo.toml  FORMATTING.md  README.md  README.zh_CN.md
src/: lib.rs  pending_cancel.rs  rayon_executor_service.rs  rayon_executor_service_build_error.rs  rayon_executor_service_builder.rs  rayon_executor_service_state.rs  rayon_task_handle.rs
tests/: mod.rs  rayon_executor_service_build_error_tests.rs  rayon_executor_service_builder_tests.rs  rayon_executor_service_state_tests.rs  rayon_executor_service_tests.rs  rayon_task_handle_tests.rs
tests/common/: helpers.rs  mod.rs
