[package]
name = "qubit-rayon-executor"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-rayon-executor"
description = "Rayon-backed CPU-bound executor service for Qubit Rust libraries"
homepage = "https://github.com/qubit-ltd/rs-rayon-executor"
documentation = "https://docs.rs/qubit-rayon-executor"
readme = "README.md"
keywords = ["rayon", "executor", "cpu", "concurrency"]
categories = ["concurrency"]
exclude = [
    "align-ci.sh",
    "ci-check.sh",
    "coverage.sh",
    "style-check.sh",
    "update-submodule.sh",
    ".github/*",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_rayon_executor"
doctest = true

[dependencies]
rayon = "1.12"
thiserror = "2.0"
tokio = { version = "1.52", features = ["sync"] }

qubit-atomic = "0.11"
qubit-executor = "0.3"
qubit-function = "0.13"
# qubit-executor 0.3.x still requires the qubit-atomic 0.10/qubit-cas 0.5
# dependency line used by qubit-state-machine 0.3.1.
qubit-state-machine = "0.3"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
