[package]
name = "qubit-rayon-executor"
version = "0.4.2"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-rayon-executor"
description = "Rayon-backed CPU-bound executor service for Qubit Rust libraries"
homepage = "https://github.com/qubit-ltd/rs-rayon-executor"
documentation = "https://docs.rs/qubit-rayon-executor"
readme = "README.md"
keywords = ["rayon", "executor", "cpu", "concurrency"]
categories = ["concurrency"]
exclude = [
    "align-ci.sh",
    "ci-check.sh",
    "coverage.sh",
    "style-check.sh",
    "update-submodule.sh",
    ".github/*",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_rayon_executor"
doctest = true

[dependencies]
rayon = "1.12"
thiserror = "2.0"

qubit-atomic = "0.13"
qubit-executor = "0.5"
qubit-function = "0.13"
qubit-lock = { default-features = false, version = "0.6" }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
